test: add perf test with gatling